--- a/Vault/Vault.csproj
+++ b/Vault/Vault.csproj
@@ -10,13 +10,15 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0-rc.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Data/" />
     <Folder Include="Data/Context/" />
+    <Folder Include="Interfaces/" />
     <Folder Include="Models/" />
+    <Folder Include="Repositories/" />
   </ItemGroup>
 
 </Project>
