seperation of project in to multiple sub projects to prevent de[endency hell  and creation of Vault.Index for handling elastic search applications as a part of seperation of concerns

--- a/Vault.Tests/Vault.Tests.csproj
+++ b/Vault.Tests/Vault.Tests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Vault\Vault.csproj" />
+    <ProjectReference Include="..\Vault.Core\Vault.Core.csproj" />
   </ItemGroup>
 
 </Project>
