add database connection and connect the pipeline for storage. Add Vault.Db to address dependency hell.

--- a/Vault.Tasks/Vault.Tasks.csproj
+++ b/Vault.Tasks/Vault.Tasks.csproj
@@ -17,5 +17,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Vault.Core\Vault.Core.csproj" />
     <ProjectReference Include="..\Vault.Index\Vault.Index.csproj" />
+    <ProjectReference Include="..\Vault.Db\Vault.Db.csproj" />
   </ItemGroup>
 </Project>
