--- a/Vault/Vault.csproj
+++ b/Vault/Vault.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Vault.Core\Vault.Core.csproj" />
     <ProjectReference Include="..\Vault.Index\Vault.Index.csproj" />
+    <ProjectReference Include="..\Vault.Db\Vault.Db.csproj" />
   </ItemGroup>
 
 </Project>
